<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="409dp"
        android:layout_height="93dp"
        android:fontFamily="@font/covered_by_your_grace"
        android:gravity="center"
        android:text="@string/healthy_diet"
        android:textColor="#6C63FF"
        android:textColorLink="#6C63FF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quote"
        android:layout_width="381dp"
        android:layout_height="85dp"
        android:layout_marginBottom="204dp"
        android:fontFamily="cursive"
        android:text="@string/hippocratesquote"
        android:textColor="#6C63FF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="213dp"
        android:layout_height="57dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#000000"
        android:drawableEnd="@drawable/icon_login"
        android:fontFamily="@font/arbutus"
        android:text="@string/log_in"
        android:textColor="#6C63FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quote"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="409dp"
        android:layout_height="553dp"
        android:contentDescription="@string/foodlist"
        app:layout_constraintBottom_toTopOf="@+id/quote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:srcCompat="@drawable/main_image" />

    <TextView
        android:id="@+id/questionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="64dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/signUpTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:linksClickable="true"
        android:minHeight="48dp"
        android:text="@string/sign_up"
        android:textColor="#6C63FF"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/questionTxt"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>