<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/icon_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/logout_icon"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/icon_settings"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="13dp"
            android:focusable="true" />


    </androidx.appcompat.widget.Toolbar>



    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ltAnimation"
        android:layout_width="408dp"
        android:layout_height="211dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/lottiefryingpan"
        tools:ignore="ImageContrastCheck" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="386dp"
        android:layout_height="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/lottiewelcome"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/cook_quote"
        android:layout_width="334dp"
        android:layout_height="143dp"
        android:fontFamily="@font/covered_by_your_grace"
        android:text="@string/quote"
        android:textColor="#6C63FF"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ltAnimation"
        app:layout_constraintVertical_bias="0.228" />

    <Button
        android:id="@+id/click_here"
        android:layout_width="293dp"
        android:layout_height="51dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="#000000"
        android:drawableEnd="@drawable/icon_login"
        android:fontFamily="@font/arbutus"
        android:text="@string/click_here"
        android:textColor="#6C63FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cook_quote"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>